style: All elements in place on page and mobile responsive. Need to correct spacing.

--- a/style.css
+++ b/style.css
@@ -1,84 +1,177 @@
-/* BEGIN OLD CSS */
-html {
-	position: relative;
-	min-height: 100%;
-}
-.container-1 {
-	width: 100%;
+/* .main-container {
+	display: block;
+	flex-flow: row wrap;
+	background-color: #ffffff;
+	margin-top: auto;
+	margin-bottom: auto;
+	margin-left: auto;
+	margin-right: auto;
+} */
+
+.nav-container {
+	display: flex;
+	flex-flow: row wrap;
 	height: auto;
+	padding-top: 2%;
+	background-color: #ffffff;
+	align-items: left;
+	margin-top: auto;
+	margin-bottom: auto;
 }
+
+h1#documentation {
+	display: flex;
+	flex-flow: row wrap;
+	align-items: left;
+	background-color: #ffffff;
+	align-items: flex-start;
+	text-align: left;
+	margin-top: auto;
+	margin-bottom: auto;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+h1#debt {
+	display: flex;
+	flex-flow: row wrap;
+	align-items: right;
+	background-color: #ffffff;
+	align-items: flex-end;
+	text-align: right;
+	margin-top: auto;
+	margin-bottom: auto;
+	margin-left: auto;
+	margin-right: auto;
+	justify-content: right;
+}
+
 ul {
-	background-color: #fc9898;
+	display: flex;
+	align-items: flex-start;
+	text-align: left;
+	background-color: #ffffff;
+	flex-flow: row wrap;
 }
 li {
 	font-family: "Red Rose", cursive;
 	float: left;
 	margin: 10 px;
-	padding-left: 45px;
+	padding-left: 10%;
 	font-size: 28px;
-	color: white;
+	color: #fc9898;
 	list-style: none;
-	background-color: #fc9898;
+	background-color: #ffffff;
 }
 a.nav-link-active {
-	color: white;
+	color: #fc9898;
 }
-.container-2 {
-	width: 900px;
-	margin: 0 auto;
-	padding: 100px;
+
+/* .flex-item-left {
+	flex: 50%;
+	-ms-flex-align: baseline; */
+
+h1#debt {
+	display: flex;
+	align-items: flex-end;
+	text-align: right;
 }
+
+h1#documentation {
+	display: flex;
+	align-items: flex-end;
+	text-align: left;
+	margin-left: 10%;
+}
+
 h1 {
 	font-family: "Red Rose", cursive;
 	font-weight: lighter;
 	color: black;
-	font-size: 60px;
-	float: left;
+	font-size: 2rem;
 }
+
 h2 {
 	font-family: "Red Rose", cursive;
 	color: black;
 	font-size: 60px;
 	float: right;
 }
-.hero-image {
-	background-image: url("piggy-bank-1056615_1920.png");
-	vertical-align: middle;
-	background-size: contain;
-	background-position: center;
-	background-repeat: no-repeat;
-	-ms-flex-item-align: center;
+
+img.img-fluid {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: auto;
+	margin-bottom: auto;
 	max-width: 100%;
 }
-.footer {
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	height: 60px;
-	line-height: 60px;
-	background-color: #fc9898;
-}
-.text-muted {
+/* .image { */
+/* background-image: ("assets/piggy-bank.png"); */
+/* background-repeat: no-repeat;
+	display: flex;
+	flex-flow: column wrap; */
+/* max-width: 100%; */
+/* width: 10%;
+	height: auto;
+	justify-content: center;
+	align-items: center;
+	-ms-flex-item-align: center;
+} */
+/* background-image {
+	image-rendering: "assets/piggy-bank.png";
+} */
+
+span.text-muted {
 	font-family: "Red Rose", cursive;
 	font-size: 24px;
 	color: white;
 	float: right;
-}
-
-/* BEGIN NEW CSS */
-
-.flex-item-right {
-	background-color: white;
-	flex: 50%;
-}
-
-#piggy {
 	align-items: center;
-	background-size: cover;
+	justify-content: center;
 }
 
-@media (max-width: 900px) {
+.nav-item {
+	font-family: "Red Rose", cursive;
+	font-size: 24px;
+	color: #fc9898;
+	float: left;
+}
+
+.footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	max-height: 60px;
+	line-height: 60px;
+	background-color: #fc9898;
+}
+
+@media (max-width: 800px) {
 	.flex-container {
-		flex-direction: column;
+		flex-flow: column wrap;
+	}
+}
+html {
+	font-size: 1rem;
+}
+
+/* Define breakpoints and font sizes */
+@media (min-width: 640px) and (max-width: 1023px) {
+	html {
+		font-size: 1.0625rem;
+	}
+}
+
+@media (min-width: 1024px) and (max-width: 1279px) {
+	html {
+		font-size: 1.125rem;
+	}
+}
+
+/* Define max font size and viewport */
+@media (min-width: 1280px) {
+	html {
+		font-size: 1.1875rem;
 	}
 }
